# 3c-bot

./: .gitignore  CITATION.cff  LICENSE  README.md  SCCHR.ipynb  pyproject.toml  requirements.txt  test_imports.py  test_minimal.py
docs/: parameter_justification.md  replication_guide.md  theoretical_framework.md
results/: README.md
src/: __init__.py  analysis.py  core.py  experiments.py  main.py  main_widgets.ipynb  visualization.py
src/hroc/: main_cli  main_widgets.py
