[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scchr-3c-bot"
version = "1.0.0"
description = "Computational Modeling of Behavioral Dynamics in Human-Robot Organizational Communities"
authors = [
    {name = "Alexandre do Nascimento Silva", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["human-robot", "organizational", "simulation", "social-value", "asimov"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0", 
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
jupyter = ["ipywidgets>=7.6.0", "jupyter>=1.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/3c-bot"
Repository = "https://github.com/yourusername/3c-bot"
"Bug Reports" = "https://github.com/yourusername/3c-bot/issues"
